Update webpack folder

--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -21,23 +21,23 @@
 
                 <div class="img__item">
                     <img src=<%=require("@img/jpg.jpg" )%> alt="jpg.jpg" />
-                    <p>Jpg</p>
+                    <p>.jpg</p>
                 </div>
                 <div class="img__item">
                     <img src=<%=require("@img/gif.gif" )%> alt="gif.gif" />
-                    <p>Gif (Chinchilla ↑)</p>
+                    <p>.gif (Chinchilla ↑)</p>
                 </div>
                 <div class="img__item">
                     <img src=<%=require("@img/png.png" )%> alt="png.png" />
-                    <p>Png</p>
+                    <p>.png</p>
                 </div>
                 <div class="img__item">
                     <img src=<%=require("@img/svg.svg" )%> alt="svg.svg" />
-                    <p>Svg</p>
+                    <p>.svg</p>
                 </div>
                 <div class="img__item">
                     <img src=<%=require("@img/webp.webp" )%> alt="webp.webp" />
-                    <p>Webp</p>
+                    <p>.webp</p>
                 </div>
             </div>
         </section>
